--- a/angular.json
+++ b/angular.json
@@ -118,6 +118,10 @@
               "devServerTarget": "VedruDietFrontend:serve:production"
             }
           }
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy",
+          "options": {}
         }
       }
     }
